--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           </div>
             </div>
          <div class="row">
-          <div class="col-md-5" align="right">
+          <div class="col-md-5">
             <img src="images/mug.png" class="img-responsive" alt="Orange Udacity Mug">
-          <div class="features" align="left">
+          <div class="features">
             <h2>Main Features</h2>
           <ul>
             <li>Holds your favorite drink</li>
@@ -38,6 +38,8 @@
           </p>
           </div>
           </div>
-     </div>      
+     </div> 
+     </div> 
+    </div>     
     </body>
  </html>
